# Quotescom

./: Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  pyvenv.cfg  readme.txt  requirements.txt  tfa.py
Scripts/: activate  activate.bat  activate.fish
data_dev/: my_database.db
docs/source/: conf.py  index.rst
src/quotescom/: web.py
src/quotescom.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/quotescom/static/css/: style1.css
src/quotescom/templates/: delete.html  login.html  register.html
static/: scripts.js
templates/: delete.html  insert.html  retrieve.html
